// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

package com.example.replicated.multimap;

option java_outer_classname = "SomeMultiMapApi";

message Key {
  string key = 1;
}

message Value {
  string value = 1;
}

message PutValue {
  string multi_map_id = 1 [(kalix.field).id = true];
  Key key = 2;
  Value value = 3;
}

message RemoveValue {
  string multi_map_id = 1 [(kalix.field).id = true];
  Key key = 2;
  Value value = 3;
}

message GetValues {
  string multi_map_id = 1 [(kalix.field).id = true];
  Key key = 2;
}

message CurrentValues {
  Key key = 1;
  repeated Value values = 2;
}

message GetAllValues {
  string multi_map_id = 1 [(kalix.field).id = true];
}

message AllCurrentValues {
  repeated CurrentValues all_values = 1;
}

service MultiMapService {
  option (kalix.codegen) = {
    replicated_entity: {
      name: ".domain.SomeMultiMap"
      type_id: "some-multi-map"
      replicated_multi_map: {
        key: ".domain.SomeKey"
        value: ".domain.SomeValue"
      }
    }
  };

  rpc Put(PutValue) returns (google.protobuf.Empty);
  rpc Remove(RemoveValue) returns (google.protobuf.Empty);
  rpc Get(GetValues) returns (CurrentValues);
  rpc GetAll(GetAllValues) returns (AllCurrentValues);
}

service ScalarMultiMapService {
  option (kalix.codegen) = {
    replicated_entity: {
      name: ".domain.SomeScalarMultiMap"
      type_id: "some-scalar-multi-map"
      replicated_multi_map: {
        key: "string"
        value: "double"
      }
    }
  };


  rpc Put(PutValue) returns (google.protobuf.Empty);
  rpc Remove(RemoveValue) returns (google.protobuf.Empty);
  rpc Get(GetValues) returns (CurrentValues);
  rpc GetAll(GetAllValues) returns (AllCurrentValues);
}
